Prevent text overflowing

--- a/platform-ui-skin/src/main/webapp/skin/less/social/portlets/uiMembersPortlet/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/portlets/uiMembersPortlet/Style.less
@@ -14,6 +14,7 @@
 
 		.mention-input {
 			flex : 1;
+			word-break: break-word;
 
 			.selectize-input {
 				text-overflow: inherit;
